--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
+    "react-horizontal-scrolling-menu": "^7.1.7",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
